@@ -1,4 +1,0 @@
-2014/1/1
-1. add GUI 
-2. show committed cards, uncomitted cards deperately from all cards
-3. add sqlite database file
