@@ -9,3 +9,5 @@
 	add goto the 'next' and 'prev' card function in show_cards function
 2014/1/12
 	add function for button 'previous', 'next' and 'show answer/question'
+2014/1/19
+	finish basic function of study and test for supermemogui
